--- a/data/cities/cochabamba/bio-mercado.yml
+++ b/data/cities/cochabamba/bio-mercado.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: Calle Juan Capriles
 housenumber: "144"
 phone: +591 4 4589834;+591 75951533
-opening_hours: Tu, Sa 08:30-20:00; Mo, We-Fr 08:30-13:30
+opening_hours: Tu, Sa 08:30-20:00; Mo,We-Fr 08:30-13:30; Su,PH Off
 website: ""
